--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/ssk9597/LINE-Node-TypeScript-Gourmet/issues"
   },
-  "homepage": "https://github.com/ssk9597/LINE-Node-TypeScript-Gourmet#readme"
+  "homepage": "https://github.com/ssk9597/LINE-Node-TypeScript-Gourmet#readme",
+  "dependencies": {
+    "@line/bot-sdk": "^7.3.0",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
+  }
 }
