Create a directory for the controller

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "ES6",
     "module": "commonjs",
     "sourceMap": true,
-    "outDir": "./api/dist",
+    "outDir": "./api/controller/dist",
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["api/src/**/**/*"]
+  "include": ["api/controller/src/**/**/*"]
 }
