--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # LINE（ご自分のBotの値に書き換えを行ってください）
-CHANNEL_SECRET = "a9152fc.........."
-CHANNEL_ACCESS_TOKEN = "zTon3fKIG7m7dH1/AnyA.........."
+CHANNEL_SECRET = "a9152"
+CHANNEL_ACCESS_TOKEN = "zTon3"
+
+# Google_map（ご自分の値に書き換えを行ってください）
+GOOGLE_DEV_API = "AIzaS"
+GOOGLE_PROD_API = "AIzaS"
